Adding environment URL to the provisioning status
