# cmd/handlers/catalog_items_handler.go
@@ -16,7 +16,10 @@ type CatalogItemsHandler struct {
 // Make sure we conform to the StrictServer interface
 var _ StrictServerInterface = (*CatalogItemsHandler)(nil)
 
-func NewCatalogItemsHandler(catalogItemsController *models.CatalogItemsController, rcController *models.ResourceClaimsController) *CatalogItemsHandler {
+func NewCatalogItemsHandler(
+	catalogItemsController *models.CatalogItemsController,
+	rcController *models.ResourceClaimsController,
+) *CatalogItemsHandler {
 	return &CatalogItemsHandler{
 		catalogItemsController: catalogItemsController,
 		rcController:           rcController,
@@ -24,7 +27,10 @@ func NewCatalogItemsHandler(catalogItemsController *models.CatalogItemsControlle
 }
 
 // TODO: add pagination
-func (h *CatalogItemsHandler) ListCatalogItems(ctx context.Context, request ListCatalogItemsRequestObject) (ListCatalogItemsResponseObject, error) {
+func (h *CatalogItemsHandler) ListCatalogItems(
+	ctx context.Context,
+	request ListCatalogItemsRequestObject,
+) (ListCatalogItemsResponseObject, error) {
 	catalogItemList := h.catalogItemsController.ListAll()
 
 	items := make([]CatalogItem, 0, len(catalogItemList))
@@ -37,13 +43,15 @@ func (h *CatalogItemsHandler) ListCatalogItems(ctx context.Context, request List
 			Id:                v.Id,
 			Provider:          v.Provider,
 		})
-
 	}
 
 	return ListCatalogItems200JSONResponse(items), nil
 }
 
-func (h *CatalogItemsHandler) GetCatalogItem(ctx context.Context, request GetCatalogItemRequestObject) (GetCatalogItemResponseObject, error) {
+func (h *CatalogItemsHandler) GetCatalogItem(
+	ctx context.Context,
+	request GetCatalogItemRequestObject,
+) (GetCatalogItemResponseObject, error) {
 	catalogItem, ok, err := h.catalogItemsController.GetByName(request.Name)
 	if err != nil {
 		return GetCatalogItem500JSONResponse(Error{
@@ -66,7 +74,10 @@ func (h *CatalogItemsHandler) GetCatalogItem(ctx context.Context, request GetCat
 	}), nil
 }
 
-func (h *CatalogItemsHandler) CreateProvision(ctx context.Context, request CreateProvisionRequestObject) (CreateProvisionResponseObject, error) {
+func (h *CatalogItemsHandler) CreateProvision(
+	ctx context.Context,
+	request CreateProvisionRequestObject,
+) (CreateProvisionResponseObject, error) {
 	rc := models.ResourceClaimParameters{
 		Name:         request.Body.Name,
 		ProviderName: request.Body.ProviderName,
@@ -95,7 +106,10 @@ func (h *CatalogItemsHandler) CreateProvision(ctx context.Context, request Creat
 	}, nil
 }
 
-func (h *CatalogItemsHandler) DeleteProvision(ctx context.Context, request DeleteProvisionRequestObject) (DeleteProvisionResponseObject, error) {
+func (h *CatalogItemsHandler) DeleteProvision(
+	ctx context.Context,
+	request DeleteProvisionRequestObject,
+) (DeleteProvisionResponseObject, error) {
 	err := h.rcController.DeleteResourceClaim(request.Name)
 	if err != nil {
 		return DeleteProvision500JSONResponse(Error{
@@ -107,7 +121,10 @@ func (h *CatalogItemsHandler) DeleteProvision(ctx context.Context, request Delet
 	return DeleteProvision204Response{}, nil
 }
 
-func (h *CatalogItemsHandler) GetProvisionStatus(ctx context.Context, request GetProvisionStatusRequestObject) (GetProvisionStatusResponseObject, error) {
+func (h *CatalogItemsHandler) GetProvisionStatus(
+	ctx context.Context,
+	request GetProvisionStatusRequestObject,
+) (GetProvisionStatusResponseObject, error) {
 	claimStatus, ok, err := h.rcController.GetResourceClaimStatus(request.Name)
 	if err != nil {
 		return GetProvisionStatus500JSONResponse(Error{
@@ -127,14 +144,17 @@ func (h *CatalogItemsHandler) GetProvisionStatus(ctx context.Context, request Ge
 	return GetProvisionStatus200JSONResponse(ProvisionStatus{
 		State:          claimStatus.State,
 		GUID:           claimStatus.GUID,
+		ShowroomURL:    &claimStatus.ShowroomURL,
 		RandomString:   claimStatus.RandomString,
 		RuntimeDefault: claimStatus.RuntimeDefault,
 		RuntimeMaximum: claimStatus.RuntimeMaximum,
 	}), nil
-
 }
 
-func (h *CatalogItemsHandler) Health(ctx context.Context, request HealthRequestObject) (HealthResponseObject, error) {
+func (h *CatalogItemsHandler) Health(
+	ctx context.Context,
+	request HealthRequestObject,
+) (HealthResponseObject, error) {
 	status := OK
 
 	return Health200JSONResponse{
